--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="category_home_tasks">ХОЗЯЙСКОЕ</string>
     <string name="category_tickets">ТАЛОНЫ</string>
     <string name="stats">ЛИЧНЫЕ ДОСТИЖЕНИЯ</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
