--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="stats">ЛИЧНЫЕ ДОСТИЖЕНИЯ</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_new_task_button">СОЗДАТЬ ЗАДАЧУ</string>
 </resources>
