--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="label_stats_tasks_pending">К ВЫПОЛНЕНИЮ</string>
     <string name="label_stats_party_tasks_reports">ГОСИЗМЕНЫ</string>
 
-    <string name="task_name_hint">НАЗВАНИЕ ЗАДАЧИ</string>
-    <string name="task_description_hint">ОПИСАНИЕ</string>
+    <string name="task_name_hint">Заголовок *</string>
+    <string name="task_description_hint">Описание</string>
 
     <string name="delete_task_dialog_title">-50000 СОЦИАЛЬНЫЙ КРЕДИТ</string>
     <string name="delete_task_dialog_text">Внимание! Попытка уклонения от выполнения партийных поручений была зафиксирована и передана уполномоченным лицам. Дата вашего отбытия в лагерь труда "Пчёлка" будет назначена следующим утром.</string>
